@@ -375,6 +375,7 @@ $specialPageAliases = array(
 	'Wantedcategories'          => array( 'Wantedcategories' ),
 	'Mostlinked'                => array( 'Mostlinked' ),
 	'Mostlinkedcategories'      => array( 'Mostlinkedcategories' ),
+	'Mostlinkedtemplates'		=> array( 'Mostlinkedtemplates' ),
 	'Mostcategories'            => array( 'Mostcategories' ),
 	'Mostimages'                => array( 'Mostimages' ),
 	'Mostrevisions'             => array( 'Mostrevisions' ),
@@ -1549,7 +1550,7 @@ The [http://meta.wikimedia.org/wiki/Help:Job_queue job queue] length is '''$7'''
 'nmembers'		=> '$1 {{PLURAL:$1|member|members}}',
 'nrevisions'		=> '$1 {{PLURAL:$1|revision|revisions}}',
 'nviews'		=> '$1 {{PLURAL:$1|view|views}}',
-'specialpage-empty'     => 'This page is empty.',
+'specialpage-empty'     => 'There are no results for this report.',
 'lonelypages'	=> 'Orphaned pages',
 'lonelypages-summary'	=> '',
 'lonelypagestext'	=> 'The following pages are not linked from other pages in this wiki.',
@@ -1571,6 +1572,8 @@ The [http://meta.wikimedia.org/wiki/Help:Job_queue job queue] length is '''$7'''
 'mostlinked-summary' => '',
 'mostlinkedcategories' => 'Most linked to categories',
 'mostlinkedcategories-summary' => '',
+'mostlinkedtemplates' => 'Most linked-to templates',
+'mostlinkedtemplates-summary' => '',
 'mostcategories' => 'Articles with the most categories',
 'mostcategories-summary' => '',
 'mostimages'	=> 'Most linked to images',
